kubernetes/services/headscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  annotations:
    hub.radunenu.com/description: The tailnet's coordination server
